<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.apps.gator.MainActivity" >

    <!-- About, option -->
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom"
        android:title="@string/action_about"/>

    <!-- Refresh, option -->
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never"/>
    
    <!-- Share, option -->
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never"/>

</menu>