<!-- http://stackoverflow.com/a/8224479/614867 Based on this discussion moving from linear layout to relative layout since i want to use both the horizontal and vertical length of the screen. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.apps.gator.MainActivity" >

    <!-- Takes the input text provided by the user -->

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />

    <!-- To send the data to the translator services. -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="sendMessage"
        android:text="@string/button_send" />

    <!-- To translate data from English to Malayalam -->

    <RadioButton
        android:id="@+id/Malayalam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_message"
        android:layout_below="@+id/edit_message"
        android:layout_marginTop="26dp"
        android:onClick="languageRadioButtonClicked"
        android:text="@string/button_englishToMalayalam" />

    <!-- To translate data from Malayalam to English -->

    <RadioButton
        android:id="@+id/English"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Malayalam"
        android:layout_below="@+id/Malayalam"
        android:layout_marginTop="18dp"
        android:onClick="languageRadioButtonClicked"
        android:text="@string/button_malayalamToEnglish" />

</RelativeLayout>